<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CabbieMagnet</string>
    <string name="location_txt">Enter location:</string>
    <string name="companies_txt">Select company</string>
    <string name="welcome_txt">Welcome, </string>
    <string name="user_txt">Anonymous</string>
    <string name="internet_no_connection">No Internet connection!</string>
    <string name="findme">Find Me!</string>
    <string name="from">From address:</string>
    <string name="from_city_text">From city:</string>
    <string name="comapany_label_text">Company: </string>
    <string name="to_address_label">To Address:</string>
    <string name="to_city_label">To city:</string>
    <string name="edit_username_text">Edit Username</string>
    <string name="new_order_text">Book a Cab!</string>
    <string name="view_orders_text">View old bookings</string>
    <string name="phone_number_text">Phonenumber</string>
    <string name="login_txt">Login</string>
    <string name="register_text">Register</string>
    <string name="car_type_label">Car: </string>
    <string name="car_quantity_label">Quantity: </string>
    <string name="departure_time_label">Departure time: </string>
    <string name="order_cab_text">Order a cab!</string>
    <string name="get_from_map_txt">Find on map</string>
    <string name="about_app">Bachelor Project @ VIA Univeristy College, Horsens</string>
    <string name="about_team">Team: Aleksandar Lazarov, Boris Mihaylov, Stefan Shoumanov</string>
    <string name="maps_question">Here?</string>
    <string name="maps_answer_yes">Sure!</string>
    <string name="maps_answer_no">Nooo</string>
</resources>
